syntax = "proto3";

message SFVector3f {
    repeated float elements = 1 [packed=true];
}

message SFVector4f {
    repeated float elements = 1 [packed=true];
}

message StateFieldRegistry {
    int32 time_t_control_cycle_limit_us = 2;
    uint32 time_t_last_cycle_end_us = 3;
    uint64 last_transition_ccno = 4;

    float fin_py_cmd = 16;
    float fin_ny_cmd = 17;
    float fin_px_cmd = 18;
    float fin_nx_cmd = 19;

    float lower_motor_cmd = 20;

    /*[[[cog
    import psrc.sfr_gen.sfr_gen as sfr_gen
    sfr_gen.proto_generate_all()
    ]]]*/
    float time_t_average_cycle_time_us = 21;
    uint32 mcl_control_cycle_num = 22;
    int32 mc_state = 23;
    int32 target_mc_state = 24;
    int32 gnc_state = 25;
    int32 target_gnc_state = 26;
    uint32 packed_imu_state = 27;
    SFVector3f zero_vec = 28;
    SFVector3f imu_linear_acc = 29;
    SFVector3f imu_acc = 30;
    SFVector3f imu_gyr_acc = 31;
    SFVector3f imu_euler_vec = 32;
    SFVector4f imu_quat = 33;
    SFVector3f gnc_global_target_error = 34;
    SFVector3f gnc_global_target_pos = 35;
    SFVector3f state_global_pos = 36;
    SFVector3f state_global_vel = 37;
    SFVector3f state_global_acc = 38;
    SFVector3f state_euler_vec = 39;
    SFVector3f gnc_target_global_acc = 40;
    SFVector4f gnc_global_quat = 41;
    SFVector3f gnc_euler_angles = 42;
    SFVector3f sim_global_linear_pos = 43;
    SFVector3f sim_global_linear_vel = 44;
    SFVector3f sim_global_linear_acc = 45;
    SFVector4f sim_global_quat = 46;
    SFVector3f sim_euler_angles = 47;
    //[[[end]]]

}
